<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:spicymango="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/sort_by"
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="@string/menu_navigation_sort_by"
        android:titleCondensed="@string/menu_navigation_sort_by_condensed"
        spicymango:showAsAction="ifRoom">
        <menu
            android:id="@+id/community_menu_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <item
                android:id="@+id/community_sort_random"
                android:title="@string/menu_community_random"/>
            <item
                android:id="@+id/community_sort_staff"
                android:title="@string/menu_community_staff"/>
            <item
                android:id="@+id/community_sort_stories"
                android:title="@string/menu_community_stories"/>
            <item
                android:id="@+id/community_sort_follows"
                android:title="@string/menu_community_follows"/>
            <item
                android:id="@+id/community_sort_date"
                android:title="@string/menu_community_date"/>
        </menu>
    </item>

</menu>