<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".dialogs.FontDialog" >

    <TextView
        android:id="@+id/diag_font_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:text="@string/diag_font_demo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diag_font_size"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary" />

    <SeekBar
        android:id="@+id/diag_font_seek"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diag_font_family"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="?android:attr/textColorPrimary"/>

    <Spinner
        android:id="@+id/diag_font_spinner"
        style="?android:attr/spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:entries="@array/diag_font_family" />

</LinearLayout>