<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/top_bottom_padding"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/top_bottom_padding" >

    <TextView
        android:id="@+id/story_menu_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/menu_title_text_size"
        android:textStyle="bold"
        tools:text="Title"/>

    <TextView
        android:id="@+id/story_menu_list_item_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/story_menu_list_item_title"
        android:layout_alignStart="@+id/story_menu_list_item_title"
        android:layout_below="@+id/story_menu_list_item_title"
        android:textColor="?android:attr/textColorSecondary"
        android:textStyle="bold"
        tools:text="Author"/>

    <TextView
        android:id="@+id/story_menu_list_item_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/story_menu_list_item_author"
        android:layout_alignStart="@+id/story_menu_list_item_author"
        android:layout_below="@+id/story_menu_list_item_author"
        android:textColor="?android:attr/textColorSecondary"
        tools:text="Summary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/story_menu_list_item_author"
        android:layout_alignStart="@+id/story_menu_list_item_author"
        android:layout_below="@+id/story_menu_list_item_summary"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/story_menu_list_item_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/story_menu_words" 
            android:textColor="?android:attr/textColorSecondary"/>

        <TextView
            android:id="@+id/story_menu_list_item_chapters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/story_menu_chapters" 
            android:textColor="?android:attr/textColorSecondary"/>

        <TextView
            android:id="@+id/story_menu_list_item_follows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/story_menu_follows"
			android:textColor="?android:attr/textColorSecondary"/>
    </LinearLayout>

</RelativeLayout>